@@ -32,6 +32,9 @@ $cpg_time_start = cpgGetMicroTime();
 // List of valid meta albums - needed for displaying 'no image to display' message
 $valid_meta_albums = array('lastcom', 'lastcomby', 'lastup', 'lastupby', 'topn', 'toprated', 'lasthits', 'random', 'search', 'lastalb', 'favpics', 'datebrowse');
 
+// HTML tags replace pairs (used at some places for input validation)
+$HTML_SUBST = array('&' => '&amp;', '"' => '&quot;', '<' => '&lt;', '>' => '&gt;', '%26' => '&amp;', '%22' => '&quot;', '%3C' => '&lt;', '%3E' => '&gt;','%27' => '&#39;', "'" => '&#39;');
+
 // Set a flag if register globals is on to show a warning to admin
 if (ini_get('register_globals') == '1' || strtolower(ini_get('register_globals')) == 'on') {
     $register_globals_flag = true;
