@@ -1145,7 +1145,7 @@ $lang_display_comments['confirm_delete'] = 'Are you sure you want to delete this
 $lang_display_comments['add_your_comment'] = 'Add your comment';
 $lang_display_comments['name'] = 'Name';
 $lang_display_comments['comment'] = 'Comment';
-$lang_display_comments['your_name'] = 'Anon';
+$lang_display_comments['your_name'] = 'Your name';
 $lang_display_comments['report_comment_title'] = 'Report this comment to the administrator';
 $lang_display_comments['pending_approval'] = 'Comment will be visible after admin approval'; // cpg1.5
 $lang_display_comments['unapproved_comment'] = 'Unapproved comment'; // cpg1.5
